fixed overflow-life bug in small screens

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 .container{
     max-width: 80%;
     margin: 0 auto;
-    background-color: #fff;
     padding: 1em;
     border-radius: 15px;
 
@@ -32,7 +31,7 @@
     max-width: 375px;
     border-radius: 15px;
     background-color: #fff;
-    padding: 1em;
+    padding: 1.5em;
     box-shadow: 2px 8px 16px 0px rgba(0,0,0,0.2);
 }
 /* miss me with BEM, all my homies hate BEM */
